--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Movie</title>
     <style>
         body {
-            background-color: white;
+            background-color: darkslateblue;
             margin: 0 10%;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: white;
