--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Movie</title>
     <style>
         body {
-            background-color: darkslateblue;
+            background-color: navy;
             margin: 0 10%;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: white;
@@ -36,6 +36,7 @@
     <div class="center">
     <h1>Movie</h1>
     <p>This is the movie</p>
+    <img src=https://m.media-amazon.com/images/M/MV5BNDE3ODcxYzMtY2YzZC00NmNlLWJiNDMtZDViZWM2MzIxZDYwXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_SX300.jpg alt="Italian Trulli">
     </div>
 </body>
 </html>
