--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie</title>
+    <title>Weekly Movie</title>
     <style>
         body {
             background-color: navy;
@@ -34,8 +34,9 @@
             <a href="./movies.html" style="color:aquamarine">Movies</a></p>
     </header>
     <div class="center">
-    <h1>Movie</h1>
-    <p>This is the movie</p>
+    <h1>Weekly Movie</h1>
+    <p>"Watch movie – Anonymous"</p><br>
+    <p>"This is a great movie – Rahul"/p>
     <img src=https://m.media-amazon.com/images/M/MV5BNDE3ODcxYzMtY2YzZC00NmNlLWJiNDMtZDViZWM2MzIxZDYwXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_SX300.jpg alt="Italian Trulli">
     </div>
 </body>
