--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <a href="./movies.html" style="color:aquamarine">Movies</a></p>
     </header>
     <div class="center">
-    <h1>Weekly Movie</h1>
+    <h1>Weekly Movie</h1><br>
+    <p>This is the movie, this week</p>
     <p>"Watch movie – Anonymous"</p><br>
     <p>"This is a great movie – Rahul"/p>
     <img src=https://m.media-amazon.com/images/M/MV5BNDE3ODcxYzMtY2YzZC00NmNlLWJiNDMtZDViZWM2MzIxZDYwXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_SX300.jpg alt="Italian Trulli">
