--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </head>
 <body>
     <header>
-        <p><a href="./index.html" style="color:aquamarine">
+        <p><a href="./index.html" style="color:white">
             Home</a> |
-            <a href="./movies.html" style="color:aquamarine">Movies</a></p>
+            <a href="./movies.html" style="color:white">Movies</a></p>
     </header>
     <div class="center">
     <h1>Weekly Movie</h1>
